# sproxy-web

./: .ghci  ChangeLog.md  LICENSE  README.md  default.nix  example.config  module.nix  sproxy-web.cabal
src/: Application.hs  Config.hs  DB.hs  Entities.hs  Handlers.hs  Main.hs  Run.hs  Server.hs  SproxyError.hs
src/Views/: Common.hs  DomainList.hs  DomainPrivileges.hs  ErrorPage.hs  GroupList.hs  Homepage.hs  MemberList.hs  PrivilegeRules.hs  Search.hs
src/Views/Common/: Page.hs
static/css/: style.css
static/js/: delete-user.js  domainlist.js  domainprivileges.js  grouplist.js  memberlist.js  rename-user.js  rules.js  up-there.js  utils.js
test/: ConfigSpec.hs  MainSpec.hs
