name:                sproxy-web
version:             0.2.0.0
synopsis:            Web interface to sproxy
description:         Web frontend for managing sproxy
homepage:            http://github.com/zalora/sproxy-web
license:             BSD3
license-file:        LICENSE
author:              Alp Mestanogullari <alp@zalora.com>
maintainer:          Alp Mestanogullari <alp@zalora.com>
copyright:           Zalora South East Asia Pte. Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          static/css/*.min.css,
                     static/css/*.css,
                     static/js/*.min.js,
                     static/js/jquery.jeditable.min.js,
                     static/js/jquery.color.min.js,
                     static/loading.gif,
                     static/fonts/glyphicons-halflings-regular.eot,
                     static/fonts/glyphicons-halflings-regular.svg,
                     static/fonts/glyphicons-halflings-regular.ttf,
                     static/fonts/glyphicons-halflings-regular.woff,
                     static/js/*.js

executable sproxy-web
  main-is:             Main.hs
  other-modules:       Config,
                       DB,
                       Entities,
                       Handlers,
                       Paths_sproxy_web,
                       SproxyError,
                       Views.Common,
                       Views.DomainList,
                       Views.DomainPrivileges,
                       Views.ErrorPage,
                       Views.GroupList,
                       Views.Homepage,
                       Views.MemberList,
                       Views.PrivilegeRules
  build-depends:       base >= 4.5,
                       text >= 0.11,
                       bytestring >= 0.10,
                       blaze-html >= 0.7,
                       blaze-markup >= 0.6,
                       aeson >= 0.6,
                       resource-pool >= 0.2,
                       configurator >= 0.2,
                       hflags >= 0.4,
                       postgresql-simple >= 0.4,
                       scotty >= 0.6,
                       wai-middleware-static >= 0.4,
                       wai-extra >= 2.0,
                       mtl >= 2.1,
                       http-types >= 0.8
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -O2 -funbox-strict-fields 
                       -Wall -rtsopts -threaded -fno-warn-unused-do-bind
  ghc-prof-options:    -prof -auto-all
