name:                sproxy-web
version:             0.2.0.0
synopsis:            Web interface to sproxy
description:         Web frontend for managing sproxy
homepage:            https://github.com/zalora/sproxy-web
license:             MIT
license-file:        LICENSE
author:              Alp Mestanogullari
maintainer:          Igor Pashev <pashev.igor@gmail.com>
copyright:           2014-2016, Zalora South East Asia Pte. Ltd
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          static/css/*.min.css,
                     static/css/*.css,
                     static/js/*.min.js,
                     static/js/jquery.jeditable.min.js,
                     static/js/jquery.color.min.js,
                     static/loading.gif,
                     static/fonts/glyphicons-halflings-regular.eot,
                     static/fonts/glyphicons-halflings-regular.svg,
                     static/fonts/glyphicons-halflings-regular.ttf,
                     static/fonts/glyphicons-halflings-regular.woff,
                     static/js/*.js

executable sproxy-web
  main-is:             Main.hs
  other-modules:       Config,
                       DB,
                       Entities,
                       Handlers,
                       Paths_sproxy_web,
                       SproxyError,
                       Views.Common,
                       Views.DomainList,
                       Views.DomainPrivileges,
                       Views.ErrorPage,
                       Views.GroupList,
                       Views.Homepage,
                       Views.MemberList,
                       Views.PrivilegeRules
  build-depends:       base >= 4.8 && < 5,
                       text >= 0.11,
                       bytestring >= 0.10,
                       blaze-html >= 0.7,
                       blaze-markup >= 0.6,
                       aeson >= 0.6,
                       resource-pool >= 0.2,
                       configurator >= 0.2,
                       hflags >= 0.4,
                       postgresql-simple >= 0.4,
                       scotty >= 0.10,
                       wai-middleware-static >= 0.4,
                       wai-extra >= 2.0,
                       mtl >= 2.1,
                       http-types >= 0.8,
                       data-default-class,
                       wai,
                       warp >= 3.2,
                       directory,
                       filepath
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -O2 -funbox-strict-fields
                       -Wall -rtsopts -threaded -fno-warn-unused-do-bind
  ghc-prof-options:    -prof -auto-all

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options:
    -Wall -rtsopts -threaded -fno-warn-unused-do-bind
  default-language: Haskell2010
  hs-source-dirs: src, test
  main-is: Spec.hs
  build-depends:
    base == 4.*,
    hspec,
    hspec-wai,
    interpolate,
    temporary,
    bytestring,
    configurator,
    hflags,
    directory,
    filepath,
    postgresql-simple,
    http-types,
    blaze-html,
    mtl,
    data-default-class,
    resource-pool,
    wai,
    warp,
    wai-extra,
    wai-middleware-static,
    scotty,
    text
